--- a/bleh2.html
+++ b/bleh2.html
@@ -34,7 +34,7 @@ p    {color: red;}
   <br><br>
   
   <b>Employee DOJ</b>:<br>
-  <input type="text" name="e_doj" >
+  <input type="date" name="e_doj" >
   <br><br>
   
   <b>Employee Designation</b>:<br>
